2002-02-19  Clint Adams  <clint@zsh.org>

	* 16673: zshconfig.ac, Doc/Zsh/.distfiles, Doc/Zsh/mod_langinfo.yo,
	Src/Modules/.distfiles, Src/Modules/langinfo.c,
	Src/Modules/langinfo.mdd: add langinfo module as an interface
	to locale information.

2002-02-19  Geoff Wing  <gcw@zsh.org>

	* 16635: Src/Zle/zle_refresh.c: make sure we display lists in
	singlelinezle mode

	* unposted: Doc/Zsh/metafaq.yo: update distribution sites - remove one
	site (France), add one (Netherlands)

2002-02-18  Wayne Davison  <wayned@users.sourceforge.net>

	* 16672: Src/hist.c: Fixed a just-introduced bug in prepnexthistent()
	that made it work wrong when "curline" was in the history list.

2002-02-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 16669: Doc/Zsh/compsys.yo, Src/Zle/computil.c: allow an
	argument containing only a single colon as a separator between
	options to _arguments and specs

	* 16668: Src/Zle/compcore.c: fix group handling nothing should
	now possibly be added to the wrong group again

	* 16667: Completion/Base/Utility/_arguments: fix test for
	prefix-needed

2002-02-17  Clint Adams  <clint@zsh.org>

	* 16662: Completion/Unix/Command/_cdcd: use parameter expansion
	instead of grep, sed, and seq.

2002-02-16  Wayne Davison  <wayned@users.sourceforge.net>

	* users/4678: Src/hist.c: Fixed a hard-to-trigger bug in the
	history-rewriting code that could lose the history contents.

2002-02-16  Wayne Davison  <wayned@users.sourceforge.net>

	* 16625: Src/hist.c: Optimized putoldhistentryontop() for use by
	resizehistents().

2002-02-14  Clint Adams  <clint@zsh.org>

	* Gergely Nagy, 16644: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_cdcd: completion for cdcd.

2002-02-14  Geoff Wing  <gcw@zsh.org>

	* unposted: Doc/Zsh/metafaq.yo: update distribution sites - remove four
	sites, add three, change one path

2002-02-13  Wayne Davison  <wayned@users.sourceforge.net>

	* 16618: Src/hist.c: Improved resizehistents() so that it honors
	HIST_EXPIRE_DUPS_FIRST.
