@@ -1,7 +1,7 @@
 DISTFILES_SRC='
 .distfiles
 _alias     _disable  _jobs_builtin  _read    _ttyctl    _which     _zstyle
-_autoload  _echotc   _kill          _sched   _typeset   _zcompile
+_autoload  _echotc   _kill          _sched   _typeset   _zcompile  _dirs
 _bindkey   _echoti   _limit         _set     _ulimit    _zed
 _builtin   _emulate  _mere          _setopt  _unhash    _zftp
 _cd        _enable   _precommand    _source  _unsetopt  _zle
